--- a/calc.html
+++ b/calc.html
@@ -12,10 +12,10 @@
         <label>Enter the Second Number:</label>
         <input type="text" name="num2" id="txt2"><br>
 
-        <button type="button" onclick="add()">add</button>
-        <button type="button" onclick="sub()">sub</button>
-        <button type="button" onclick="mul()">mul</button>
-        <button type="button" onclick="div()">div</button>
+        <button type="button" id="btn" onclick="add()">add</button>
+        <button type="button" id="btn1" onclick="sub()">sub</button>
+        <button type="button" id="btn2" onclick="mul()">mul</button>
+        <button type="button" id="btn3" onclick="div()">div</button>
 
         <strong>Result: <span id="res"> </span> </strong>
     </form>
