by vijay link for playwright code

--- a/calc.html
+++ b/calc.html
@@ -15,7 +15,7 @@
         <button type="button" id="btn" onclick="add()">add</button>
         <button type="button" id="btn1" onclick="sub()">sub</button>
         <button type="button" id="btn2" onclick="mul()">mul</button>
-        <button type="button" id="btn3" onclick="div()">div</button>
+        <button type="button" id="btn3a" onclick="div()">div</button>
 
         <strong>Result: <span id="res"> </span> </strong>
     </form>
