--- a/assetioneaxample.html
+++ b/assetioneaxample.html
@@ -20,7 +20,7 @@
 
 <button type="button" id="" onclick="jsalert()">Alert Button</button>
 <button type="button" id="" onclick="jsconfirm()">Alert Confirm</button>
-<button type="button" id="" onclick="jsPropmt()">Alert Prompt</button>
+<button type="button" id="" onclick="jsPrompt()">Alert Prompt</button>
 
 
 </body>
